Add paragraph and script

--- a/running-js.html
+++ b/running-js.html
@@ -6,6 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-
+    <p>Hey</p>
+    <script>
+        const p = document.querySelector('p');
+        console.log(p);
+    </script>
 </body>
 </html>
