--- a/variables.html
+++ b/variables.html
@@ -6,6 +6,13 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <script>
+        var first = 'wes'; // variable declaration statement
+        let age = 300;
+        const cool = true;
+        console.log(first); // function call statement
+        console.log(age);
+        console.log(cool);
+    </script>
 </body>
 </html>
