Add comments and title

--- a/variables.html
+++ b/variables.html
@@ -3,16 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Variables</title>
 </head>
 <body>
     <script>
+        //function scoped
         var first = 'wes'; // variable declaration statement
+
+        //block scoped
         let age = 300;
         const cool = true;
+
         console.log(first); // function call statement
         console.log(age);
         console.log(cool);
+
     </script>
 </body>
 </html>
