--- a/variables.html
+++ b/variables.html
@@ -18,6 +18,15 @@
         console.log(age);
         console.log(cool);
 
+        //camel case
+        const iLovePizza = true
+
+        //UpperCamelCase
+        const ILoveToEatHotDogs = false;
+
+        //snake case!!
+        const this_is_snake_case = 'cool';
+
     </script>
 </body>
 </html>
