--- a/custom-functions/index.html
+++ b/custom-functions/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../../base.css">
 </head>
 <body>
+    <button class="clickMe">Click me!</button>
     <script src="./ways-to-make-a-function.js"></script>
 </body>
 </html>
