Update debugging.html and debugging.js

--- a/custom-functions/exercises/Debugging/debugging.html
+++ b/custom-functions/exercises/Debugging/debugging.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <button class="bigger">Make Me Bigger</button>
-    <script src="./debugging-START.js"></script>
+    <script src="./debugging.js"></script>
 </body>
 </html>
