--- a/closures.html
+++ b/closures.html
@@ -7,6 +7,17 @@
     <link rel="stylesheet" href="../base.css">
 </head>
 <body>
-    
+    <script>
+        function outer() {
+            const outerVar = 'Hey I am the outer Var!';
+            function inner() {
+                const innerVar = 'Hey I am an inner Var!';
+                console.log(innerVar);
+                console.log(outerVar);
+            }
+            inner();
+        }
+        outer();
+    </script>
 </body>
 </html>
