--- a/closures.html
+++ b/closures.html
@@ -15,9 +15,10 @@
                 console.log(innerVar);
                 console.log(outerVar);
             }
-            inner();
+            return inner;
         }
-        outer();
+        const innerFn = outer();
+        innerFn();
     </script>
 </body>
 </html>
